[package]
name = "raktar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raktar-handler"
path = "application/main.rs"

[features]
local = []

[dependencies]
anyhow = "^1.0.68"
aws-config = "^0.55.0"
aws-sdk-dynamodb = "^0.25.1"
aws-sdk-s3 = "^0.25.0"
axum = "^0.6.12"
byteorder = "^1.4.3"
lambda-web = "^0.2.1"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+0_25"] }
serde_json = "1.0.95"
tokio = { version = "^1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "^0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
